<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Photogallery Application"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title_search"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/title_search"
        android:layout_alignRight="@+id/title_search"
        android:layout_alignEnd="@+id/title_search"
        android:layout_marginTop="30dp"
        android:id="@+id/search_fromDate" />

    <TextView
        android:text="From Date: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_fromDate"
        android:layout_alignLeft="@+id/title_search"
        android:layout_alignStart="@+id/title_search"
        android:layout_marginBottom="11dp"
        android:id="@+id/search_fromDateLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/search_fromDate"
        android:layout_alignRight="@+id/search_fromDate"
        android:layout_alignEnd="@+id/search_fromDate"
        android:layout_marginTop="20dp"
        android:id="@+id/search_toDate" />

    <TextView
        android:text="To Date: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_toDate"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_marginTop="12dp"
        android:id="@+id/search_toDateLabel" />

    <Button
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/search_toDate"
        android:layout_alignEnd="@+id/search_toDate"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp"
        android:id="@+id/search_cancel"
        android:onClick="cancel" />

    <Button
        android:id="@+id/search_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/search_toDateLabel"
        android:layout_toRightOf="@+id/search_toDateLabel"
        android:onClick="search"
        android:text="Search" />

    <EditText
        android:id="@+id/search_topLeftLat"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_toDate"
        android:layout_alignEnd="@+id/title_search"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="124dp"
        android:ems="10"
        android:hint="Lat"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/search_bottomRightLat"
        android:layout_width="90dp"
        android:layout_height="46dp"
        android:layout_below="@+id/search_topLeftLat"
        android:layout_alignEnd="@+id/title_search"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="125dp"
        android:ems="10"
        android:hint="Lat"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/search_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bottomRightLong"
        android:layout_alignEnd="@+id/title_search"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_toDateLabel"
        android:layout_alignEnd="@+id/search_toDateLabel"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="0dp"
        android:text="Top Left:" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="0dp"
        android:text="Bottom Right:" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView"
        android:layout_alignBottom="@+id/search_keyword"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="13dp"
        android:text="Keywords:" />

    <EditText
        android:id="@+id/search_topLeftLong"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_toDate"
        android:layout_alignEnd="@+id/title_search"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="Long"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/search_bottomRightLong"
        android:layout_width="96dp"
        android:layout_height="44dp"
        android:layout_below="@+id/search_topLeftLong"
        android:layout_alignEnd="@+id/title_search"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="Long"
        android:inputType="numberSigned|numberDecimal" />

</RelativeLayout>
